NetBSD Problem Report #50824

From www@NetBSD.org  Wed Feb 17 12:20:08 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 337E47ABFD
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 17 Feb 2016 12:20:08 +0000 (UTC)
Message-Id: <20160217122007.3D7177ACCB@mollari.NetBSD.org>
Date: Wed, 17 Feb 2016 12:20:07 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.sbin/altq/altqstat/quip_client.c:360: huge input data problem ?
X-Send-Pr-Version: www-1.0

>Number:         50824
>Category:       bin
>Synopsis:       src/usr.sbin/altq/altqstat/quip_client.c:360: huge input data problem ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Feb 17 12:25:00 +0000 2016
>Closed-Date:    Wed Feb 17 19:58:10 +0000 2016
>Last-Modified:  Wed Feb 17 19:58:10 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160216
>Organization:
>Environment:
>Description:

[src/usr.sbin/altq/altqstat/quip_client.c:360]: (warning) scanf without field width limits can crash with huge input data.


Source code is

   if (sscanf(buf, "%s", qdisc) != 1)

but buf is populated from 

    result_code = quip_recvresponse(server, NULL, buf, &len);

so function quip_recvresponse can't know how big the buffer
to write into is. So it looks as if a sufficiently large buffer
will crash the function.


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50824 CVS commit: src/usr.sbin/altq/altqstat
Date: Wed, 17 Feb 2016 14:51:29 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Feb 17 19:51:29 UTC 2016

 Modified Files:
 	src/usr.sbin/altq/altqstat: quip_client.c

 Log Message:
 PR/50824: David Binderman: Limit scanf width


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/usr.sbin/altq/altqstat/quip_client.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 17 Feb 2016 19:58:10 +0000
State-Changed-Why:
Fixed by christos, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.