PR/50824: David Binderman: Limit scanf width